# KDU-AI-Projects

./: .gitignore  README.md  docker-compose.dynamodb.yml  medical_document_extraction_plan.md  pyproject.toml  pyrightconfig.json  requirements.txt  test_flow.py
configs/: default.yaml  local.yaml  models.yaml  thresholds.yaml
data/: keyword_index.db  processed_registry.json
data/benchmark/: ground_truth.json  state.json
data/dynamodb/: shared-local-instance.db
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  styles.css
medical_extraction/: __init__.py
scripts/: backfill_keyword_index.py  check_model_cache.py  download_models.py  run_local_sample.sh  setup_dynamodb_audit.py
src/medical_extraction/: __init__.py
src/medical_extraction/answering/: __init__.py  openai_answerer.py  prompting.py
src/medical_extraction/benchmark/: __init__.py  engine.py
src/medical_extraction/classification/: __init__.py  crop_classifier.py  image_coverage.py  page_classifier.py  text_quality.py
tests/unit/: test_access.py  test_audit_store.py  test_benchmark_engine.py  test_chroma_store.py  test_chunking.py  test_copyable_pdf_extractor.py  test_handwritten_prescription_extractor.py  test_image_coverage.py  test_keyword_index.py  test_lab_parser.py  test_medication_parser.py  test_merge_engine.py  test_paddle_extractor.py  test_page_classifier.py  test_pipeline_cache.py  test_processed_registry.py  test_prompting.py  test_rag_ingestion.py  test_rag_text.py  test_redaction.py  test_retrieval.py  test_text_quality.py
(+60 files in other folders)
