[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "medical-document-extraction"
version = "0.1.0"
description = "Local MVP for medical document extraction."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PyMuPDF>=1.24.0",
  "pdfplumber>=0.11.0",
  "camelot-py>=1.0.9",
  "surya-ocr>=0.17.0",
  "torch>=2.7.0",
  "transformers>=4.57.0,<5",
  "Pillow>=10.0.0",
  "PyYAML>=6.0.0",
  "rapidfuzz>=3.9.0",
]

[project.optional-dependencies]
ocr = []
tables = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
